# brick-sdl2-learning

./: CMakeLists.txt
src/: main.cpp
